unpackaged/main/default/objects/ZdTicketComment__c/ZdTicketComment__c.object-meta.xml
<CustomObject>
    <label>Zendesk Ticket Comments</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zendesk Ticket Comments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>