unpackaged/main/default/objects/ZdTicketComment__c/fields/created_at__c.field-meta.xml
<CustomField>
    <fullName>created_at__c</fullName>
    <label>created_at</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>