unpackaged/main/default/objects/ZdTicketComment__c/fields/ZdPVHCommentId__c.field-meta.xml
<CustomField>
    <fullName>ZdPVHCommentId__c</fullName>
    <externalId>true</externalId>
    <label>ZdPVHCommentId</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>