unpackaged/main/default/objects/ZdTicketComment__c/fields/ZdPVHParentTicketId__c.field-meta.xml
<CustomField>
    <fullName>ZdPVHParentTicketId__c</fullName>
    <externalId>true</externalId>
    <label>ZdPVHParentTicketId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>