unpackaged/main/default/objects/ZdTicketComment__c/fields/ZdTnCCommentId__c.field-meta.xml
<CustomField>
    <fullName>ZdTnCCommentId__c</fullName>
    <externalId>true</externalId>
    <label>ZdTnCCommentId</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>