unpackaged/main/default/objects/ZdTicketComment__c/fields/ZdTnCParentTicketId__c.field-meta.xml
<CustomField>
    <fullName>ZdTnCParentTicketId__c</fullName>
    <externalId>true</externalId>
    <label>ZdTnCParentTicketId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>